// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<div
  className="m-schedule-page__schedule-note-container"
>
  <h3
    className="m-schedule-page__schedule-note-title"
  >
    Schedule Note
  </h3>
  <div
    className="m-schedule-page__schedule-note"
  >
    <h4
      className="m-schedule-page__service"
    >
      Peak Service
    </h4>
    <div
      className="m-schedule-page__service-subheading"
    >
      Weekdays 6:30AM - 9AM, 3:30PM - 6:30 PM
    </div>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      5 minutes
    </p>
  </div>
  <div
    className="m-schedule-page__schedule-note"
  >
    <h4
      className="m-schedule-page__service"
    >
      Off Peak / Weekends
    </h4>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      8-12 minutes except weekend mornings and late night
    </p>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      26 minutes weekend mornings and late night
    </p>
  </div>
</div>
`;

exports[`it renders without service exceptions 1`] = `
<div
  className="m-schedule-page__schedule-note-container"
>
  <h3
    className="m-schedule-page__schedule-note-title"
  >
    Schedule Note
  </h3>
  <div
    className="m-schedule-page__schedule-note"
  >
    <h4
      className="m-schedule-page__service"
    >
      Peak Service
    </h4>
    <div
      className="m-schedule-page__service-subheading"
    >
      Weekdays 6:30AM - 9AM, 3:30PM - 6:30 PM
    </div>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      5 minutes
    </p>
  </div>
  <div
    className="m-schedule-page__schedule-note"
  >
    <h4
      className="m-schedule-page__service"
    >
      Off Peak / Weekends
    </h4>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      8-12 minutes 
    </p>
  </div>
</div>
`;
